// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPasswordChangedByAdminEmail > should generate correct output for auto_generated method 2`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Password Changed</title>
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; max-width: 600px; margin: 0 auto; padding: 20px;">
  <div style="background: #fef2f2; border: 1px solid #fecaca; border-radius: 8px; padding: 20px; margin: 20px 0;">
    <h2 style="margin: 0 0 15px 0; color: #991b1b;">⚠️ Password Changed</h2>

    <p style="margin-bottom: 15px;">Hi John Doe,</p>

    <p style="margin-bottom: 15px;">
      Your password for <strong>Test Dive Shop</strong> was changed by an administrator
      (<strong>Admin User</strong>) on January 15, 2026 at 10:30 AM.
    </p>

    <p style="margin-bottom: 15px;">A temporary password was generated for you. You will be required to change it on your next login.</p>

    <p style="text-align: center; margin: 25px 0;">
      <a href="https://test.divestreams.com/login" style="display: inline-block; background: #0066cc; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 500;">
        Login Now
      </a>
    </p>

    <hr style="border: none; border-top: 1px solid #e5e7eb; margin: 25px 0;">

    <p style="color: #666; font-size: 14px; margin: 0;">
      <strong>⚠️ Security Notice:</strong> If you didn't request this change, please contact your administrator immediately.
    </p>
  </div>

  <p style="color: #999; font-size: 12px; text-align: center; margin-top: 20px;">
    This email was sent by Test Dive Shop
  </p>
</body>
</html>"
`;

exports[`getPasswordChangedByAdminEmail > should generate correct output for auto_generated method 3`] = `
"Password Changed - Security Notice

Hi John Doe,

Your password for Test Dive Shop was changed by an administrator (Admin User) on January 15, 2026 at 10:30 AM.

A temporary password was generated for you. You will be required to change it on your next login.

Login: https://test.divestreams.com/login

⚠️ SECURITY NOTICE: If you didn't request this change, please contact your administrator immediately.

---
This email was sent by Test Dive Shop"
`;

exports[`getPasswordChangedByAdminEmail > should generate correct output for email_reset method 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Password Changed</title>
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; max-width: 600px; margin: 0 auto; padding: 20px;">
  <div style="background: #fef2f2; border: 1px solid #fecaca; border-radius: 8px; padding: 20px; margin: 20px 0;">
    <h2 style="margin: 0 0 15px 0; color: #991b1b;">⚠️ Password Changed</h2>

    <p style="margin-bottom: 15px;">Hi John Doe,</p>

    <p style="margin-bottom: 15px;">
      Your password for <strong>Test Dive Shop</strong> was changed by an administrator
      (<strong>Admin User</strong>) on January 15, 2026 at 10:30 AM.
    </p>

    <p style="margin-bottom: 15px;">A password reset link was sent to your email.</p>

    

    <hr style="border: none; border-top: 1px solid #e5e7eb; margin: 25px 0;">

    <p style="color: #666; font-size: 14px; margin: 0;">
      <strong>⚠️ Security Notice:</strong> If you didn't request this change, please contact your administrator immediately.
    </p>
  </div>

  <p style="color: #999; font-size: 12px; text-align: center; margin-top: 20px;">
    This email was sent by Test Dive Shop
  </p>
</body>
</html>"
`;

exports[`getPasswordChangedByAdminEmail > should generate correct output for email_reset method 2`] = `
"Password Changed - Security Notice

Hi John Doe,

Your password for Test Dive Shop was changed by an administrator (Admin User) on January 15, 2026 at 10:30 AM.

A password reset link was sent to your email.



⚠️ SECURITY NOTICE: If you didn't request this change, please contact your administrator immediately.

---
This email was sent by Test Dive Shop"
`;

exports[`getPasswordChangedByAdminEmail > should generate correct output for manual_entry method 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Password Changed</title>
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #333; max-width: 600px; margin: 0 auto; padding: 20px;">
  <div style="background: #fef2f2; border: 1px solid #fecaca; border-radius: 8px; padding: 20px; margin: 20px 0;">
    <h2 style="margin: 0 0 15px 0; color: #991b1b;">⚠️ Password Changed</h2>

    <p style="margin-bottom: 15px;">Hi John Doe,</p>

    <p style="margin-bottom: 15px;">
      Your password for <strong>Test Dive Shop</strong> was changed by an administrator
      (<strong>Admin User</strong>) on January 15, 2026 at 10:30 AM.
    </p>

    <p style="margin-bottom: 15px;">A new password was set for your account.</p>

    <p style="text-align: center; margin: 25px 0;">
      <a href="https://test.divestreams.com/login" style="display: inline-block; background: #0066cc; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; font-weight: 500;">
        Login Now
      </a>
    </p>

    <hr style="border: none; border-top: 1px solid #e5e7eb; margin: 25px 0;">

    <p style="color: #666; font-size: 14px; margin: 0;">
      <strong>⚠️ Security Notice:</strong> If you didn't request this change, please contact your administrator immediately.
    </p>
  </div>

  <p style="color: #999; font-size: 12px; text-align: center; margin-top: 20px;">
    This email was sent by Test Dive Shop
  </p>
</body>
</html>"
`;

exports[`getPasswordChangedByAdminEmail > should generate correct output for manual_entry method 2`] = `
"Password Changed - Security Notice

Hi John Doe,

Your password for Test Dive Shop was changed by an administrator (Admin User) on January 15, 2026 at 10:30 AM.

A new password was set for your account.

Login: https://test.divestreams.com/login

⚠️ SECURITY NOTICE: If you didn't request this change, please contact your administrator immediately.

---
This email was sent by Test Dive Shop"
`;
